src/compile/__fixtures__/invalid/missing-meta/sketch.js
function sketch(p, state) {
  p.setup = () => p.createCanvas(400, 400);
  p.draw = () => p.background(0);
}
